navbar och hero fix, responsiv

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,17 +2,19 @@
     border-right: 11px solid var(--secondary-clr);
     border-left: 11px solid var(--secondary-clr);
     background: var(--background-clr);
-    position: relative;
     /* position: fixed;
     top: 0;
     left: 0; */
-    padding-block: max(2vh, 1rem);
+    padding-block: .5rem;
 }
 
 .Navbar img {
-    border: 10px solid var(--background-clr);
+    border: 5px solid var(--background-clr);
     border-radius: 50%;
-    height: 80px;
+    position: absolute;
+    top: 3.5rem;
+    height: 140px;
+    left: calc(50% - 70px);
 }
 
 .Navbar .bars {
@@ -20,29 +22,26 @@
     font-size: 2rem;
 }
 
-.Navbar .right-nav-div {
-    display: flex;
-    align-items: center;
-}
-
 .Navbar .nav-content-wrapper {
+    position: relative;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
+    margin-bottom: 1rem;
 }
 
 .Navbar .left-nav-div {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin-bottom: 1.5rem;
+    margin-bottom: .3rem;
 }
 
 .Navbar .open-hours {
     color: var(--black-clr);
     font-weight: bold;
     font-size: .7rem;
-    margin-bottom: .3rem;
+    margin-bottom: .2rem;
 }
 
 .Navbar .btn-order {
@@ -52,34 +51,18 @@
 }
 
 @media (min-width: 668px) {
-    
-    .Navbar img {
-        position: absolute;
-        height: 200px;
-        top: 1rem;
-        left: calc(50% - 100px);
-    }
-
-    .Navbar .nav-content-wrapper {
-        align-items: flex-end;
-    }
-
-    .Navbar .left-nav-div {
-        margin-bottom: 0;
-    }
-
-    .Navbar .bars {
+        .Navbar .bars {
         font-size: 2.5rem;
     }
     
     .Navbar .btn-order {
         font-size: .8rem;
     }
-}
 
-@media (max-width: 300px) {    
     .Navbar img {
-        display: none;
+        border: 10px solid var(--background-clr);  
+        top: 1rem;
+        height: 220px;
+        left: calc(50% - 110px);
     }
-
 }
