categories grid is done

--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -1,6 +1,34 @@
+.Categories .mb-1 {
+    margin-bottom: 1rem;
+}
+.Categories .m1 {
+    margin: 1rem;
+}
 .Categories .dflex {
     display: flex;
 }
+.Categories .center {
+    justify-content: center;
+    align-items: center;
+}
+.Categories a {
+    text-decoration: none;
+    cursor: pointer;
+}
+/* -- BTN --- */
+.Categories .main-btn {
+    width: 11rem;
+    height: 3rem;
+    background-color: #000;
+    border-radius: 3px;
+}
+.Categories .main-btn h2 {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+/* -- BTN END -- */
+
 /* -- WHEATS -- */
 .Categories .wheats {
     animation-duration: 3s;
@@ -10,8 +38,8 @@
 }
 
 .Categories .wheat {
-    width: 10rem;
-    height: 10rem;
+    width: 8rem;
+    height: 8rem;
     color: var(--primary-clr);
     animation: wheatAnimRight 3s infinite;
 }
@@ -24,27 +52,80 @@
 
 /* -- CATEGORIES -- */
 
+.Categories .categories-wrapper {
+    display: grid;
+    /* gap: .5rem; */
+    margin: 0 auto;
+    width: 100;
+}
+
 .Categories .category {
     width: 100%;
     height: 200px;
     background-color: #fff;
-    border: 3px solid var(--primary-clr);
     justify-content: center;
     align-items: center;
     display: flex;
-}
-.Categories .btn-category {
-    background: #000;
-    color: #fff;
+    margin-bottom: .5rem;
 }
 
 .Categories .cake {
-    background-image: url();
+    background: url('../../Images/cake.jpg') rgba(255, 255, 255, 0.2);
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 90%;
 }
 
+.Categories .pastry {
+    background: url('../../Images/pastry.jpg') rgba(255, 255, 255, 0.2);
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.Categories .bread {
+    background: url('../../Images/bread.png') rgba(255, 255, 255, 0.2);
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50%;
+}
 /* -- CATEGORIES END -- */
 
 /* -- SORTIMENT -- */
+    .Categories .sortiment-link {
+        justify-content: center;
+        align-items: center;
+        display: flex;
+    }
+    .Categories .arrow {
+        margin-left: .5rem;
+    }
+    .Categories .text-wrapper {
+        color: #000;
+        position: relative;
+    }
+    .Categories .text-wrapper:hover {
+        color: #000;
+    }
+
+    .Categories .text-wrapper::before {
+        content: '';
+        position: absolute;
+        display: block;
+        width: 14.5rem;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #000;
+        transform: scaleX(0);
+        transition: transform 0.3s ease;
+    }
+
+    .Categories .text-wrapper:hover::before{
+        transform: scaleX(1);
+    }
 /* -- SORTIMENT END -- */
 
 @keyframes wheatAnimRight {
@@ -60,6 +141,13 @@
 
 }
 
+@media only screen and (min-width: 602px) {
+    .Categories .categories-wrapper {
+        grid-template-columns: repeat(1,1fr);
+     }
+
+}
+
 @media only screen and (min-width: 992px)  {
 
     .Categories .hideAndShow {
@@ -69,6 +157,15 @@
     .Categories .wheat {
         width: 15rem;
         height: 15rem;
+    }
+
+    .Categories .categories-wrapper {
+       grid-template-columns: repeat(3,1fr);
+    }
+    .Categories .category {
+        width: 100%;
+        height: 500px;
+        border: 5px solid var(--background-clr);
     }
 
 }
