--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Montserrat:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap');
 
     * {
         margin: 0;
@@ -12,6 +14,8 @@
         --black-clr: #0E0E0E;
         --background-clr: #F3EEE7;
         --header-font: 'Dancing Script', cursive;
+        --secondary-header-font: 'Permanent Marker', cursive;
+        --yeseva-header-font: 'Yeseva One', cursive;
     }
 
     html, body {
