--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -21,16 +21,18 @@
 
 .About .bg-color {
     width: 100%;
-    height: 100%; 
+    height: 80vh; 
     background-color: var(--primary-clr);
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 /* -- TEXT -- */
 .About .text-wrapper {
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
 }
 .About .text-wrapper h1 {
     font-family: var(--yeseva-header-font);
@@ -51,7 +53,7 @@
 .About .img-wrapper img {
     width: 100%;
     height: 100%;
-
+    object-fit: cover;
 }
 /* -- IMG END -- */
 
@@ -82,6 +84,9 @@
 
 @media only screen and (min-width: 992px) {
 
+    .About .bg-color {
+        height: 100%;
+    }
     .About .img-wrapper {
         display: flex;
     }
@@ -105,5 +110,10 @@
 
     .About .mt {
         margin-top: 2rem;
+    }
+
+    .About .about-btn:active {
+        background: transparent;
+        color: #fff;
     }
 }
