--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,10 +2,16 @@
     border-right: 11px solid var(--secondary-clr);
     border-left: 11px solid var(--secondary-clr);
     background: var(--background-clr);
-    /* position: fixed;
-    top: 0;
-    left: 0; */
     padding-block: .5rem;
+}
+
+.fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+
+
 }
 
 .Navbar img {
@@ -15,11 +21,14 @@
     top: 3.5rem;
     height: 140px;
     left: calc(50% - 70px);
+    user-select: none;
 }
 
-.Navbar .bars {
+.Navbar .bars,
+.Navbar .close {
     color: var(--primary-clr);
     font-size: 2rem;
+    cursor: pointer;
 }
 
 .Navbar .nav-content-wrapper {
@@ -28,6 +37,7 @@
     justify-content: space-between;
     align-items: flex-end;
     margin-bottom: 1rem;
+    /* z-index: 5; */
 }
 
 .Navbar .left-nav-div {
@@ -42,16 +52,83 @@
     font-weight: bold;
     font-size: .7rem;
     margin-bottom: .2rem;
+    user-select: none;
 }
 
 .Navbar .btn-order {
     background: var(--primary-clr);
     color: var(--background-clr);
     font-size: .7rem;
+    user-select: none;
 }
 
-@media (min-width: 668px) {
-        .Navbar .bars {
+.Navbar .menu-margin {
+    margin-top: 2rem;
+}
+
+.Navbar .menu-hours {
+    visibility: hidden;
+}
+
+
+/* ---------- NAVIGATION MENU -------------- */
+
+.NavMenu {
+    background: var(--background-clr);
+    position: fixed;
+    top: 85px;
+    left: 0;
+    width: 100%;
+
+}
+
+.NavMenu .menu-container {
+    width: 70%;
+    margin: 1rem auto;
+}
+
+.NavMenu .nav-links {
+    display: inline;
+    list-style: none;
+    user-select: none;
+}
+
+.NavMenu .link {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: var(--primary-clr);
+    display: inline-block;
+    margin-bottom: 1rem;
+    padding: .5rem;
+    position: relative;
+}
+
+.NavMenu .link.active::before {
+    content: url('../../Images/menu-wheat.png');
+    position: absolute;
+    left: -2rem;
+    bottom: 0;
+}
+
+.NavMenu .nav-links:hover .link:not(:hover) {
+    color: var(--secondary-clr);
+}
+
+
+
+
+
+
+
+
+/*------ TABLET/LAPTOP ---------*/
+
+
+@media (min-width: 890px) {
+
+    .Navbar .bars,
+    .Navbar .close {
         font-size: 2.5rem;
     }
     
@@ -64,5 +141,40 @@
         top: 1rem;
         height: 220px;
         left: calc(50% - 110px);
+        z-index: 5;
     }
+    
+    .Navbar .menu-margin {
+        margin-top: 0;
+    }
+
+    .Navbar .menu-hours {
+        visibility: visible;
+    }
+    
+    /* ---------- NAVIGATION MENU -------------- */
+    
+    .NavMenu {
+        height: 250px;
+        display: flex;
+        align-items: flex-end;
+    }
+
+    .overflow-hidden {
+        overflow: hidden;
+    }
+ 
+    .NavMenu .menu-container {
+        width: min(90%, 1350px);
+    }
+
+    .NavMenu .nav-links {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    
+
+
 }
