--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,8 @@
 
     html, body {
         background: var(--background-clr);
-        font-family: 'Montserrat', sans-serif;
+        /* font-family: 'Montserrat', sans-serif; */
+        font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
     .App {
@@ -56,7 +57,7 @@
 
    /* ÄNDRA DET HÄR HOVER GREJSET  */
     .btn:hover {
-        border: 2px solid var(--background-clr);
+        /* border: 2px solid var(--background-clr); */
     }
 
     .btn:active {
