--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -69,9 +69,8 @@
 
 .Categories .categories-wrapper {
     display: grid;
-    /* gap: .5rem; */
     margin: 0 auto;
-    width: 100;
+    /* width: 100; */
 }
 
 .Categories .category {
