--- a/src/Components/Online/Online.css
+++ b/src/Components/Online/Online.css
@@ -6,15 +6,30 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 40vh;
+    height: 60vh;
 }
-.Online .btn-online {
-    background: var(--primary-clr);
-    border-radius: 3px;
+.Online .btn-online{
+    background:transparent;
+    padding:1rem;
+    transition:all .5s ease;
     color: #fff;
-    margin-top: 2rem;
+    font-size:1rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    outline:none;
     font-weight: bold;
-    animation-duration: 1s;
+    border: 3px solid var(--primary-clr);
+    box-shadow: 20px 38px 34px -26px hsla(0,0%,0%,.2);
+    border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+    margin-top: 2rem;
+    background-color: var(--primary-clr);
+}
+.Online .btn-online:hover {
+    box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
+}
+.Online .btn-online:active {
+    background: #fff;
+    color: var(--primary-clr);
 }
 
 /* -- CUP --- */
