--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,8 +1,8 @@
 .Hero .hero-bg {
     height: 100vh;
-    background-image: url('../../Images/hero-img.jpg');
+    background-image: url('../../Images/hero-img2.jpg');
     background-size: cover;
-    background-position: 60%;
+    background-position: top;
     position: relative;
     z-index: 1;
 }
@@ -12,10 +12,11 @@
     top: 16rem;
     left: 0;
     height: max(50vh, 200px);
-    width: min(85%, 600px);
-    background: var(--secondary-clr);
+    width: min(85%, 550px);
+    background: var(--background-clr);
+    border-left: 10px solid var(--secondary-clr);
     border-radius: 0 3px 3px 0;
-    /* ! BOX-SHADOW */
+    /* ! GÖR OM UPPMÄRKSAMHETSANIMERINGEN */
     
     transition: 1s ease-out;
     transform: translateX(-100%);
@@ -64,17 +65,23 @@
 
 .Hero .open-close {
     height: 80px;
-    width: 80px;
-    border-radius: 50%;
+    width: 40px;
+    border-radius: 0 40px 40px 0;
     background: var(--secondary-clr);
     position: absolute;
     top: 0;
     top: calc(50% - 40px);
-    right: -40px;
+    right: -39px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     cursor: pointer;
+
+    transition: background ease-in .7s;
+}
+
+.Hero .open-close.light-clr {
+    background: var(--background-clr);
 }
 
 .Hero .arrow {
@@ -85,28 +92,20 @@
 .Hero .wheat {
     position: absolute;
     bottom: -6px;
-    left: 1rem;
+    right: 1rem;
     font-size: 10rem;
-    color: #cabba9;
-    z-index: 1;
-}
-
-.Hero .header-div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.Hero .calendar-header {
-    /* text-align: center; */
-    font-size: 1rem;
-    color: var(--primary-clr);
+    color: #e8e0d5;
+    z-index: -1;
+    transform: scaleX(-1);
 }
 
 .Hero .week {
     font-size: .8rem;
+    font-weight: bold;
     color: var(--primary-clr);
+    text-align: end;
 }
+
 .Hero .day {
     color: var(--primary-clr);
     text-transform: uppercase;
@@ -129,33 +128,11 @@
 }
 
 
-@media (min-width: 992px ) {
+@media (min-width: 668px ) {
     .Hero .day {
         font-size: 1rem;
         text-align: center;
     }
-    
-    /* .Hero .info {
-        width: 85px;
-        height: 100%;
-        text-align: center;        
-    }
-
-    .Hero .days-list {
-        flex-direction: row;
-        width: 100%;
-        height: 50px;
-        margin-right: 0;
-    }
-    
-    .Hero .info-list {
-        flex-direction: row;
-    }
-
-    .Hero .flex-div {
-        flex-direction: column;
-    } */
-
 }
 
 
