--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,8 +10,6 @@
     top: 0;
     width: 100%;
     z-index: 2;
-
-
 }
 
 .Navbar img {
@@ -29,6 +27,38 @@
     color: var(--primary-clr);
     font-size: 2rem;
     cursor: pointer;
+}
+
+.burger {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.burger span {
+    width: 100%;
+    height: 3px;
+    background: var(--primary-clr);
+    transition: all 250ms;
+
+}
+
+.burger.open span:nth-child(1) {
+    transform: translateY(22px) rotate(45deg);
+}
+
+.burger.open span:nth-child(2) {
+    opacity: 0;
+}
+
+.burger.open span:nth-child(3) {
+    transform: translateY(-4px) rotate(-45deg);
 }
 
 .Navbar .nav-content-wrapper {
@@ -63,7 +93,7 @@
 }
 
 .Navbar .menu-margin {
-    margin-top: 2rem;
+    display: none;
 }
 
 .Navbar .menu-hours {
@@ -79,7 +109,6 @@
     top: 85px;
     left: 0;
     width: 100%;
-
 }
 
 .NavMenu .menu-container {
@@ -118,10 +147,6 @@
 
 
 
-
-
-
-
 /*------ TABLET/LAPTOP ---------*/
 
 
@@ -145,7 +170,7 @@
     }
     
     .Navbar .menu-margin {
-        margin-top: 0;
+        display: block;
     }
 
     .Navbar .menu-hours {
@@ -173,7 +198,6 @@
         justify-content: space-between;
         align-items: center;
     }
-
     
 
 
