--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -122,14 +122,15 @@
         color: var(--primary-clr);
         position: relative;
         font-size: 20px;
+        font-family: var(--yeseva-header-font);
     }
 
     .Categories .text-wrapper::before {
         content: '';
         position: absolute;
         display: block;
-        width: 16.3rem;
-        height: 2px;
+        width: 17.2rem;
+        height: 2.5px;
         bottom: 0;
         left: 0;
         background-color: var(--primary-clr);
