--- a/src/Components/Instagram/Instagram.css
+++ b/src/Components/Instagram/Instagram.css
@@ -30,12 +30,15 @@
 /* -- BTN END --- */
 
 /* -- LINK -- */
+.Instagram .btn-insta {
+    text-transform: inherit;
+}
 .Instagram .btn-instagram-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 1rem;
-    background-color: rgba(0, 0, 0, 0.596);
+    background-color: #000;
     box-shadow: 20px 38px 34px -26px hsla(0,0%,0%,.2);
     border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
     transition:all .5s ease;
@@ -47,11 +50,7 @@
 
 .Instagram .btn-instagram-wrapper:hover{
     box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
-    background-color: rgba(0, 0, 0, 0.699);
-}
-
-.Instagram .btn-instagram-wrapper:active {
-    background-color: rgba(0, 0, 0, 0.863);
+    background-color: #000;
 }
 /* -- LINK END -- */
 
