--- a/src/Components/Video/Video.css
+++ b/src/Components/Video/Video.css
@@ -1,5 +1,5 @@
 .Video {
-    width: 100vw;
+    width: 100%;
     height: 90vh;
     background-color: #fff;
     display: flex;
@@ -8,5 +8,6 @@
 }
 
 .Video h1 {
-
+    font-size: 100px;
+    font-weight: 100;
 }
