--- a/src/App.css
+++ b/src/App.css
@@ -44,13 +44,13 @@
         /* ! använd till views med scroll, lägg på frame-s till små */
     }
     .frame-s {
-        /* ! CALC - footer */
         height: calc(100vh - 200px);
+        /* ! CALC - footer */
 
     }
 
     .container {
-        width: min(90%, 1350px);
+        width: min(80%, 1350px);
         margin: 0 auto;
     }
 
@@ -65,12 +65,9 @@
     }
 
    /* ! ÄNDRA DET HÄR HOVER GREJSET  */
-    .btn:hover {
-        /* border: 2px solid var(--background-clr); */
-
+    /* .btn:hover {
         border: 2px solid var(--secondary-clr);
-
-    }
+    } */
 
     .btn:active {
         opacity: 90%;
