--- a/src/Components/Online/Online.css
+++ b/src/Components/Online/Online.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     height: 60vh;
 }
-.Online .btn-online{
+.btn-online{
     background:transparent;
     padding:1rem;
     transition:all .5s ease;
@@ -24,10 +24,10 @@
     margin-top: 2rem;
     background-color: var(--primary-clr);
 }
-.Online .btn-online:hover {
+.btn-online:hover {
     box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
 }
-.Online .btn-online:active {
+.btn-online:active {
     background: #fff;
     color: var(--primary-clr);
 }
