--- a/src/Views/Assortment/AssortmentView.css
+++ b/src/Views/Assortment/AssortmentView.css
@@ -33,14 +33,20 @@
     border-radius: 3px;
 }
 
-.AssortmentView h1 {
+.AssortmentView .top-header {
+    font-family: var(--yeseva-header-font);
     text-align: center;
+    text-transform: uppercase;
+    padding-top: 4rem;
+    font-size: 3.5rem;
+    color: var(--secondary-clr);
+
 }
 
 .AssortmentView .wrapper {
     display: flex;
     gap: 2rem;
-    padding-block: 2rem;
+    padding-bottom: 4rem;
 }
 
 .AssortmentView .list {
@@ -53,6 +59,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 4rem;
 }
 
 .AssortmentView .list li{
@@ -62,11 +69,31 @@
     color: var(--primary-clr);
 }
 
-.AssortmentView .sortiment {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
+.AssortmentView .grid-wrapper {
+    width: 100%;
 }
+
+.AssortmentView .sortiment {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1rem;
+    width: 100%;
+}
+
+.AssortmentView .header {
+    font-family: var(--yeseva-header-font);
+    color: var(--primary-clr);
+    font-size: 2rem;
+    margin: 4rem 0 1rem 0;
+    text-align: start;
+    text-transform: uppercase;
+}
+
+
+
+
+
+
 
 
 
