working on footer

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,228 @@
 .Footer {
     background: var(--secondary-clr);
-    height: 200px;
+    height: 600px;
     z-index: 400;
+    position: relative;
+}
+
+.Footer .container {
+    width: 100%;
+}
+
+.Footer .dflex {
+    display: flex;
+}
+
+.Footer .img-wrapper {
+    width: 110px;
+    height: 110px;
+    position: absolute;
+    top: -4rem;
+    left: 10%;
+    background-color: var(--secondary-clr);
+    border-radius: 50%;
+}
+.Footer .img-wrapper img {
+    width: 100px;
+    height: 100px;
+    left: .35rem;
+    top: .3rem;
+    position: absolute;
+}
+
+/* --- NAV LINKS --- */
+
+.Footer .link-wrapper {
+    width: 100%;
+    border-top: 1px solid var(--primary-clr);
+    border-bottom: 1px solid var(--primary-clr);
+    padding: 1rem;
+    margin-top: 7rem;
+    margin-bottom: 1rem;
+}
+
+.Footer .nav-wrap {
+    justify-content: center;
+    align-items: center;
+}
+
+.Footer .nav-link {
+    width: 300px;
+    text-align: center;
+    padding: .6rem;
+}
+
+.Footer .nav-link h4 {
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.Footer .vertical {
+    height: 1.9rem;
+    background-color: var(--primary-clr);
+    width: 1px;
+}
+
+.Footer .hide {
+    display: none;
+}
+
+/* --- INFO --- */
+
+.Footer .vertical-lg {
+    width: 1px;
+    height: 7rem;
+    background-color: var(--primary-clr);
+    position: absolute;
+} 
+
+.Footer .left {
+    bottom: .5rem;
+    left: -5rem;
+}
+
+.Footer .right {
+    bottom: .5rem;
+    right: -2rem;
+}
+
+.Footer .info-wrapper {
+    border-bottom: 1px solid var(--primary-clr);
+    width: 100%;
+    padding-bottom: 1rem;
+}
+
+.Footer .link-title {
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+/* .Footer .info-wrap {
+    justify-content: center;
+    align-items: center;
+} */
+
+.Footer .find h4, .Footer .find p {
+    text-align: center;
+}
+
+/* .Footer .info-link {
+   width: 100%;
+   justify-content: center;
+   align-items: center;
+   display: flex;
+} */
+
+.Footer .wrap {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.Footer .link {
+    width: 100%;
+    text-align: center;
+}
+
+.Footer .link p {
+    text-align: center;
+    font-size: 14px;
+}
+
+/* .Footer .info-title-wrapper {
+    padding: 1rem;
+}
+
+.Footer .info-title-wrapper h3 {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 16px;
+} */
+
+.Footer .time {
+    flex-direction: column;
+    text-align: center;
+}
+
+.Footer .open-title {
+    font-weight: bold;
+}
+
+.Footer .email-txt {
+    display: none;
+}
+
+.Footer .email {
+    width: 30px;
+    height: 30px;
+    color: #000;
+    margin-top: .2rem;
+}
+
+.Footer .contact {
+    margin-right: 3.5rem;
+}
+
+.Footer .find {
+    position: relative;
+    margin-right: 1.5rem;
+}
+
+.Footer .contact {
+    margin-right: 2.2rem;
+}
+
+.Footer .time p {
+    margin-bottom: .2rem;
+}
+
+
+@media only screen and (min-width: 892px) {
+    .Footer .link {
+        width: 400px;
+    }
+
+    .Footer .hide {
+        display: block;
+    }
+
+    .Footer .email {
+        display: none;
+    }
+
+    .Footer .email-txt {
+        display: block;
+    }
+
+    .Footer .show {
+        display: none;
+    }
+
+    .Footer .link-title {
+        font-size: 16px;
+    }
+}
+
+
+@media only screen and (min-width: 992px) {
+    .Footer .img-wrapper {
+        width: 130px;
+        height: 130px;
+        bottom: 8rem;
+    }
+
+    .Footer .img-wrapper img {
+        width: 120px;
+        height: 120px
+    }
+
+    .Footer .container {
+        width: 80%;
+    }
+
+    /* .Footer .info-title-wrapper h3 {
+        font-size: 20px;
+    } */
 }
