--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -4,6 +4,10 @@
     z-index: 400;
     position: relative;
 }
+.Footer a {
+    text-decoration: none;
+    margin: 0;
+}
 
 .Footer .container {
     width: 100%;
@@ -37,7 +41,7 @@
     border-top: 1px solid var(--primary-clr);
     border-bottom: 1px solid var(--primary-clr);
     padding: 1rem;
-    margin-top: 7rem;
+    margin-top: 5rem;
     margin-bottom: 1rem;
 }
 
