--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -7,6 +7,10 @@
     margin-left: .3rem;
   }
 
+  .Card .light {
+    color: var(--secondary-clr);
+  }
+
   .Card .review {
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     padding: 2rem;
